--- a/lesson_7/css/style.css
+++ b/lesson_7/css/style.css
@@ -212,7 +212,7 @@ footer {
 }
 
 .fourth-container {
-  max-width: 1640px;
+  max-width: 1143px;
   font-family: "Cormorant Infant", serif;
   font-weight: 700;
   color: #606060;
@@ -271,10 +271,7 @@ footer {
 
 .subtitle {
   font-size: 40px;
-}
-
-.text-wrapper {
-  padding-top: 11px;
+  margin-bottom: 11px;
 }
 
 .color-subtitle .subtitle {
@@ -300,13 +297,10 @@ footer {
 }
 
 .second-layout-title {
+  margin-bottom: 13px;
   font-size: 40px;
   line-height: 1.3;
   color: #37393F;
-}
-
-.second-text-wrapper {
-  padding-top: 13px;
 }
 
 .first-list,
@@ -362,8 +356,8 @@ footer {
 .link  {
   font-family: "Core Sans C", sans-serif;
   font-weight: 600;
-  padding: 5px 5px 5px 0;
 }
+
 .third-layout-title {
   font-size: 28px;
   font-weight: 600;
@@ -378,6 +372,10 @@ footer {
   font-size: 20px;
   line-height: 1.7;
   letter-spacing: 0.4px;
+}
+
+.link {
+  padding: 5px 5px 5px 0;
 }
 
 .third-subtitle {
@@ -405,7 +403,7 @@ footer {
   display: inline-block;
   max-width: 503px;
   margin-right: 75px;
-  vertical-align: top;
+  padding: 70px 0;
 }
 
 .left-box .label {
@@ -416,20 +414,19 @@ footer {
 }
 
 .fourth-title {
+  margin-bottom: 31px;
   color: #000000;
   font-size: 64px;
   text-transform: capitalize;
 }
 
 .fourth-text p {
-  padding-top: 31px;
   font-size: 30px;
   line-height: 1.4;
 }
 
 .right-box {
   display: inline-block;
-  vertical-align: top;
   font-size: 0;
 }
 
@@ -441,8 +438,9 @@ footer {
 }
 
 .first-img-container {
-  margin-right: 31px;
+  margin-right: 30px;
   padding-right: 10px;
+  vertical-align: text-bottom;
 }
 
 .first-img-container img {
@@ -450,7 +448,12 @@ footer {
   margin-top: 14px;
 }
 .second-img-container {
-  margin-bottom: 19px;
-  margin-left: -11px;
   padding-right: 11px;
+  margin-top: -70px;
+  vertical-align: top;
+}
+
+.second-img-container img {
+  margin-top: 19px;
+  margin-left: -11px;
 }
